feat(add api resources): add api for /master-data/user
